# pandu

./: Cargo.toml  Cross.toml  build.rs
src/: main.rs
src/gui/: main.slint  mainwindow.slint  sidebar.slint  statusbar.slint
src/threading/: attributes.rs  clock.rs  errors.rs  mod.rs  thread.rs
